interface PaymentClassification {

}

export default PaymentClassification;
