@startuml

package transaction {
  interface Transaction {
    --
    execute(): void
  }

  class AddEmployeeTransaction {
    --
    execute(): void;
  }

  class AddHourlyEmployee {
    - hourlyRate 
  }

  class AddSalariedEmployee {
    - salary
  }

  class AddComissionedEmployee {
    - salary
    - comissionRate
  }
  
  class DeleteEmployeeTransaction {
    --
    execute(): void;
  }

  class TimeCardTransaction {
    date
    hours
    empID
  }
}


package entity {
  class Employee {
    - empID
    - name
    - address
    - classification: Classification
    --
    + setClassification()
  }

  class TimeCard {
    date
    hours
  }
}

package value-object {
  interface PaymentClassification

  class HourlyClassification {
    - hourlyRate
    - timeCard
  }

  class SalariedClassification {
    - salary
  }

  class ComissionedClassification {
    - salary
    - comissionRate
  }
}

package database {
  class PayrollDatabase {
    --
    + addEmployee(empID: number, employee: Employee): void;
    + getEmployee(empID: number): Employee
  }
}

Transaction <|-- AddEmployeeTransaction
Transaction <|-- DeleteEmployeeTransaction
Transaction <|-- TimeCardTransaction

AddEmployeeTransaction <|-- AddHourlyEmployee
AddEmployeeTransaction <|-- AddSalariedEmployee
AddEmployeeTransaction <|-- AddComissionedEmployee

PaymentClassification <|-- HourlyClassification
PaymentClassification <|-- SalariedClassification
PaymentClassification <|-- ComissionedClassification

Employee *-- PaymentClassification

AddEmployeeTransaction --> Employee
AddEmployeeTransaction --> PayrollDatabase
DeleteEmployeeTransaction --> PayrollDatabase
TimeCardTransaction --> Employee
TimeCardTransaction --> TimeCard
TimeCardTransaction --> HourlyClassification
TimeCardTransaction --> PayrollDatabase

@enduml